--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,4 +71,4 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: "high,critical"
+          severity: "HIGH,CRITICAL"
