--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: '~1.19.8'
+          go-version: '~1.20.7'
           check-latest: true
 
       - name: Verify build
@@ -71,4 +71,4 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: "high,critical"
+          severity: "HIGH,CRITICAL"
