--- a/distributions/nr-otel-collector/manifest.yaml
+++ b/distributions/nr-otel-collector/manifest.yaml
@@ -46,3 +46,6 @@ receivers:
 replaces:
   # See https://github.com/google/gnostic/issues/262
   - github.com/googleapis/gnostic v0.5.6 => github.com/googleapis/gnostic v0.5.5
+  # Why: Fixes CVE-2024-41110 introduced by transitive docker dependency brought in by prometheusreceiver
+  # Remove: prometheusreceiver no longer brings in vulnerable docker dependency
+  - github.com/docker/docker v27.0.3+incompatible => github.com/docker/docker v27.3.1+incompatible
