--- a/distributions/nr-otel-collector/manifest.yaml
+++ b/distributions/nr-otel-collector/manifest.yaml
@@ -57,3 +57,6 @@ replaces:
   # Why: Fixes CVE-2024-45337
   # Transitive dep of: x/net, hostmetricsreceiver, prometheusreceiver
   - golang.org/x/crypto v0.28.0 => golang.org/x/crypto v0.31.0
+  # Why: Fixes CVE-2024-45338
+  # Transitive dep of: almost all components
+  - golang.org/x/net v0.30.0 => golang.org/x/net v0.33.0
